# PPCG

./: .gitignore  CMakeLists.txt  README.md  UncollapsedSampler.sln  readOutput.m
UncollapsedSampler/: Algorithms.cpp  Algorithms.h  DataSet.cpp  DataSet.h  FastMat.lib  Makefile  Restaurant.cpp  Restaurant.h  Table.cpp  Table.h  Test.cpp  UncollapsedSampler.vcxproj  UncollapsedSampler.vcxproj.filters  compile.pbs  igmm.cpp  main.cpp  main.dwf
UncollapsedSampler/BOW/: BOW.py  BOW.pyproj  BOW.sln  cleaned.txt  vocabulary.txt
UncollapsedSampler/Debug/: vc140.idb
UncollapsedSampler/Debug/Uncollap.4BD86494.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UncollapsedSampler.lastbuildstate
UncollapsedSampler/x64/Debug/: vc140.idb
UncollapsedSampler/x64/Debug/Uncollap.4BD86494.tlog/: CL.read.1.tlog  (+6 more)
docs/: Deps.dgml  firstResults.lyx  march3results.lyx
matlab/: CifarWorks.m  CollapsedSampler.m  NewTable.m  ToyData_I2GMM_journal_3rare_3normal_3D_final.mat  UncollapsedSampler.m  mymvtpdf.m
run/: README.md  align_labels.m  debug.m  dpm_createBinaryFiles.m  dpm_crism.m  dpm_readOutput.m  evaluationTable.m  igmm_all.m  igmm_colorSettings.m  igmm_createBinaryFiles.m  igmm_crism.m  igmm_datasets.m  igmm_hierarchy.m  igmm_hierarchylabels.m  igmm_hierarchylikelihood.m  igmm_mnist.m  igmm_monitorf1.m  igmm_nmfBauichuan.m  igmm_normalize.m  igmm_parallel.m  igmm_readOutput.m  igmm_toy.m  igmm_uncollapsed.m  mvtpdf.m  readMyMat.m  run_dpgmm_flow.m  slice_createBinaryFiles.m  test_T.m  visSVM.m  writeMat.m
run/archive/: drchrnd.m  myinvwish.m  mywishart.m  sample.m
